fix typo in baseurl

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://daktoamarshall.net/"
+baseURL = "http://dakotamarshall.net/"
 languageCode = "en-us"
 title = "Dakota Marshall"
 theme = "hello-friend-ng"
