--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ paginate = 10
   # Per default, this option is off. 
   # The theme is respecting the prefers-color-scheme of the operating systeme. 
   # With this option on, the page user is able to set the scheme he wants. 
-  enableThemeToggle = false
+  enableThemeToggle = true
 
 [[params.social]]
   name = "keybase"
