--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "Dakota Marshall"
 theme = "hello-friend-ng"
 paginate = 10
 copyright = "This work is licensed under a CC BY-NC-SA 4.0 International License."
+publishdir = "docs/"
 
 [params]
   dateform        = "Jan 2, 2006"
