--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ title = "Dakota Marshall"
 theme = "hello-friend-ng"
 paginate = 10
 copyright = "Copyright 2023"
-publishdir = "docs/"
+publishdir = "public/"
 
 [params]
   dateform        = "Jan 2, 2006"
