--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ publishdir = "public/"
   dateformNumTime = "2006-01-02 15:04 -0700"
 
   # Subtitle for home
-  homeSubtitle = "RHCSA || Linux Administrator || Privacy Advocate"
+  homeSubtitle = "RHCSA || Linux Infra Engineer || Privacy Advocate"
 
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
   disableReadOtherPosts = false
